objects/Line_Item_Review__c.object
<CustomObject>
    <description>This object represents review items that relate to a Case, which are assigned to different business units to review as part of a Case request</description>
    <fields>
        <fullName>Disposition_Date_Time__c</fullName>
        <inlineHelpText>This indicates the date/time that the record was updated from &apos;Submitted&apos; to another Disposition Status</inlineHelpText>
        <label>Disposition Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Disposition_Status__c</fullName>
        <label>Disposition Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>No Impact</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Partially Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>For Information Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>This field represents the duration of time between when the Line Item Review request was created, and when the Disposition Status was updated</description>
        <formula>IF( ISBLANK( Disposition_Date_Time__c ) , 24*(NOW() - CreatedDate ), 24*(Disposition_Date_Time__c - CreatedDate ))</formula>
        <inlineHelpText>This field represents the duration of time between when the Line Item Review request was created, and when the Disposition Status was updated</inlineHelpText>
        <label>Duration (hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <label>Level of Effort</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>This is for additional notes to be reviewed by the assigned reviewer</description>
        <inlineHelpText>This is for additional notes to be reviewed by the assigned reviewer</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <label>Pricing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Disposition__c</fullName>
        <label>Reason for Disposition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Line Item Reviews</relationshipLabel>
        <relationshipName>Line_Item_Reviews</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Line Item Review</label>
    <listViews>
        <fullName>All_Need_Disposition</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Related_Case__c</columns>
        <columns>Disposition_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Disposition_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>All - Need Disposition</label>
    </listViews>
    <listViews>
        <fullName>FSU_Chicago_Line_Item_Review</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Related_Case__c</columns>
        <columns>Disposition_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>FSU - Chicago</label>
        <queue>FSU_Chicago</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FSU_Danville_Line_Item_Review</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Related_Case__c</columns>
        <columns>Disposition_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>FSU - Danville</label>
        <queue>FSU_Danville</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FSU_Jacksonville_Line_Item_Review</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Related_Case__c</columns>
        <columns>Disposition_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>FSU - Jacksonville</label>
        <queue>FSU_Jacksonville</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FSU_Marshall_Line_Item_Review</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Related_Case__c</columns>
        <columns>Disposition_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>FSU - Marshall</label>
        <queue>FSU_Marshall</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FSU_Quincy_Line_Item_Review</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Related_Case__c</columns>
        <columns>Disposition_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>FSU - Quincy</label>
        <queue>FSU_Quincy</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FSU_Rockford_Line_Item_Review</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Related_Case__c</columns>
        <columns>Disposition_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>FSU - Rockford</label>
        <queue>FSU_Rockford</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FSU_San_Angelo_Line_Item_Review</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Related_Case__c</columns>
        <columns>Disposition_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>FSU - San Angelo</label>
        <queue>FSU_San_Angelo</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FSU_Springfield_Line_Item_Review</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Related_Case__c</columns>
        <columns>Disposition_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>FSU - Springfield</label>
        <queue>FSU_Springfield</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FSU_Tulsa_Line_Item_Review</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Related_Case__c</columns>
        <columns>Disposition_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>FSU - Tulsa</label>
        <queue>FSU_Tulsa</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FSU_Wichita_Falls_Line_Item_Review</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Related_Case__c</columns>
        <columns>Disposition_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>FSU - Wichita Falls</label>
        <queue>FSU_Wichita_Falls</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Reviews_Need_Disposition</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Related_Case__c</columns>
        <columns>Disposition_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Disposition_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>My Reviews - Need Disposition</label>
    </listViews>
    <listViews>
        <fullName>PG_Appeals_Line_Item_Review</fullName>
        <filterScope>Queue</filterScope>
        <label>PG - Appeals</label>
        <queue>PG_Appeals</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PG_Behavioral_Health_Line_Item_Review</fullName>
        <filterScope>Queue</filterScope>
        <label>PG - Behavioral Health</label>
        <queue>PG_Behavioral_Health</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PG_Benefit_Activation_IL_Line_Item_Review</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Related_Case__c</columns>
        <columns>Disposition_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>PG - Benefit Activation</label>
        <queue>PG_Benefit_Activation</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Line Item Review-{00000}</displayFormat>
        <label>Line Item Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Item Reviews</pluralLabel>
    <recordTypes>
        <fullName>PG_SME_Line_Item_Review</fullName>
        <active>true</active>
        <description>for use with Performance Guarantee requests for SME Review</description>
        <label>PG SME Line Item Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>PG_UW_Line_Item_Review</fullName>
        <active>true</active>
        <description>for use with Performance Guarantee requests for Underwriting Review</description>
        <label>PG UW Line Item Review</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>